added sqlite instead of storing data in memory
